fix: overflow, responsive

--- a/src/css/app.sass
+++ b/src/css/app.sass
@@ -1,6 +1,10 @@
 // app global css in Sass form
 @import url('https://fonts.googleapis.com/css2?family=Actor&display=swap')
 
+body
+  overflow-x: hidden
+  overflow-y: auto
+
 .q-page-container
   margin-left: auto
   margin-right: auto
